[gd_scene load_steps=6 format=2]

[ext_resource path="res://objects/bullet/bullet.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemies.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="Animation" id=2]

resource_name = "go"
length = 0.32
loop = true
step = 0.04
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.04, 0.08, 0.12, 0.16, 0.2, 0.24, 0.28 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 32, 33, 34, 35, 36, 37, 38, 39 ]
}

[sub_resource type="Animation" id=3]

length = 1.5
loop = false
step = 0.05
tracks/0/type = "method"
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": ""
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 40, 41, 42, 43, 44 ]
}

[node name="bullet" type="RigidBody2D"]

input_pickable = false
collision_layer = 0
collision_mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 1.0
gravity_scale = 0.0
custom_integrator = false
continuous_cd = 2
contacts_reported = 1
contact_monitor = true
sleeping = false
can_sleep = true
linear_velocity = Vector2( 0, 0 )
linear_damp = -1.0
angular_velocity = 0.0
angular_damp = -1.0
script = ExtResource( 1 )
_sections_unfolded = [ "Angular", "Applied Forces", "Collision", "Linear" ]

[node name="sprite" type="Sprite" parent="." index="0"]

scale = Vector2( 3, 3 )
texture = ExtResource( 2 )
vframes = 16
hframes = 16
frame = 39
_sections_unfolded = [ "Animation", "Transform", "Visibility" ]

[node name="collider" type="CollisionShape2D" parent="." index="1"]

shape = SubResource( 1 )

[node name="active_timer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="anim" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/go = SubResource( 2 )
anims/shutdown = SubResource( 3 )
blend_times = [  ]
_sections_unfolded = [ "Pause", "Playback Options" ]

[connection signal="body_entered" from="." to="." method="_on_bullet_body_entered"]

[connection signal="timeout" from="active_timer" to="." method="_pre_die"]


